--- a/about/index.html
+++ b/about/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
   <title>
   About · Gus Beane
 </title>
@@ -24,7 +24,7 @@ I am primarily interested in the formation and evolution of the Milky Way. I use
   <meta name="twitter:description" content="I am a sixth-year graduate student in astronomy at Harvard University.
 I am primarily interested in the formation and evolution of the Milky Way. I use idealized simulations to study specific questions about the Milky Way. I have shown with a simulation of a Milky Way-like barred galaxy that the braking interaction between the bar and the dark matter halo could be arrested by the Milky Way’s gas phase, explaining how it is both old and fast.">
 
-<meta property="og:url" content="http://localhost:1313/about/">
+<meta property="og:url" content="https://gusbeane.github.io/about/">
   <meta property="og:site_name" content="Gus Beane">
   <meta property="og:title" content="About">
   <meta property="og:description" content="I am a sixth-year graduate student in astronomy at Harvard University.
@@ -35,7 +35,7 @@ I am primarily interested in the formation and evolution of the Milky Way. I use
 
 
 
-<link rel="canonical" href="http://localhost:1313/about/">
+<link rel="canonical" href="https://gusbeane.github.io/about/">
 
 
 <link rel="preload" href="/fonts/fa-brands-400.woff2" as="font" type="font/woff2" crossorigin>
@@ -45,7 +45,7 @@ I am primarily interested in the formation and evolution of the Milky Way. I use
 
   
   
-  <link rel="stylesheet" href="/css/coder.css" media="screen">
+  <link rel="stylesheet" href="/css/coder.min.aa5ef26fa979d6793724ae2dbd71efa94fd16cb1c5c7db3b6651f21f9892a5fd.css" integrity="sha256-ql7yb6l51nk3JK4tvXHvqU/RbLHFx9s7ZlHyH5iSpf0=" crossorigin="anonymous" media="screen" />
 
 
 
@@ -95,7 +95,7 @@ I am primarily interested in the formation and evolution of the Milky Way. I use
     <nav class="navigation">
   <section class="container">
     
-    <a class="navigation-title" href="http://localhost:1313/">
+    <a class="navigation-title" href="https://gusbeane.github.io/">
       Gus Beane
     </a>
     
@@ -137,7 +137,7 @@ I am primarily interested in the formation and evolution of the Milky Way. I use
   <article>
     <header>
       <h1 class="title">
-        <a class="title-link" href="http://localhost:1313/about/">
+        <a class="title-link" href="https://gusbeane.github.io/about/">
           About
         </a>
       </h1>
@@ -173,7 +173,7 @@ I am primarily interested in the formation and evolution of the Milky Way. I use
 
   
   
-  <script src="/js/coder.js"></script>
+  <script src="/js/coder.min.6ae284be93d2d19dad1f02b0039508d9aab3180a12a06dcc71b0b0ef7825a317.js" integrity="sha256-auKEvpPS0Z2tHwKwA5UI2aqzGAoSoG3McbCw73gloxc="></script>
   
 
   
