--- a/contact/index.html
+++ b/contact/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
   <title>
   Contact · Gus Beane
 </title>
@@ -14,6 +14,7 @@
 
 <meta name="author" content="Gus Beane">
 <meta name="description" content="angus.beane@cfa.harvard.edu
+test
 
 ">
 <meta name="keywords" content="personal,academic,astrophysics">
@@ -22,19 +23,21 @@
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Contact">
-  <meta name="twitter:description" content="angus.beane@cfa.harvard.edu">
+  <meta name="twitter:description" content="angus.beane@cfa.harvard.edu
+test">
 
-<meta property="og:url" content="http://localhost:1313/contact/">
+<meta property="og:url" content="https://gusbeane.github.io/contact/">
   <meta property="og:site_name" content="Gus Beane">
   <meta property="og:title" content="Contact">
-  <meta property="og:description" content="angus.beane@cfa.harvard.edu">
+  <meta property="og:description" content="angus.beane@cfa.harvard.edu
+test">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="article">
 
 
 
 
-<link rel="canonical" href="http://localhost:1313/contact/">
+<link rel="canonical" href="https://gusbeane.github.io/contact/">
 
 
 <link rel="preload" href="/fonts/fa-brands-400.woff2" as="font" type="font/woff2" crossorigin>
@@ -44,7 +47,7 @@
 
   
   
-  <link rel="stylesheet" href="/css/coder.css" media="screen">
+  <link rel="stylesheet" href="/css/coder.min.aa5ef26fa979d6793724ae2dbd71efa94fd16cb1c5c7db3b6651f21f9892a5fd.css" integrity="sha256-ql7yb6l51nk3JK4tvXHvqU/RbLHFx9s7ZlHyH5iSpf0=" crossorigin="anonymous" media="screen" />
 
 
 
@@ -94,7 +97,7 @@
     <nav class="navigation">
   <section class="container">
     
-    <a class="navigation-title" href="http://localhost:1313/">
+    <a class="navigation-title" href="https://gusbeane.github.io/">
       Gus Beane
     </a>
     
@@ -136,13 +139,14 @@
   <article>
     <header>
       <h1 class="title">
-        <a class="title-link" href="http://localhost:1313/contact/">
+        <a class="title-link" href="https://gusbeane.github.io/contact/">
           Contact
         </a>
       </h1>
     </header>
 
     <p><a href="mailto:angus.beane@cfa.harvard.edu" >angus.beane@cfa.harvard.edu</a></p>
+<p>test</p>
 <!-- raw HTML omitted -->
 <!-- raw HTML omitted -->
 
@@ -172,7 +176,7 @@
 
   
   
-  <script src="/js/coder.js"></script>
+  <script src="/js/coder.min.6ae284be93d2d19dad1f02b0039508d9aab3180a12a06dcc71b0b0ef7825a317.js" integrity="sha256-auKEvpPS0Z2tHwKwA5UI2aqzGAoSoG3McbCw73gloxc="></script>
   
 
   
