--- a/slides/index.html
+++ b/slides/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
   <title>
   Slides · Gus Beane
 </title>
@@ -33,7 +33,7 @@ Based on Actions Are Weak Stellar Age Indicators in the Milky Way Disk and Explo
 Feb 17, 2020: UW-Madison Lunch Talk
 Based on Actions Are Weak Stellar Age Indicators in the Milky Way Disk and Exploring the evolution of stellar rotation using Galactic kinematics">
 
-<meta property="og:url" content="http://localhost:1313/slides/">
+<meta property="og:url" content="https://gusbeane.github.io/slides/">
   <meta property="og:site_name" content="Gus Beane">
   <meta property="og:title" content="Slides">
   <meta property="og:description" content=" Dynamically Dating Stars Link to heading Oct 19, 2020: MIT Lunch Talk
@@ -45,7 +45,7 @@ Based on Actions Are Weak Stellar Age Indicators in the Milky Way Disk and Explo
 
 
 
-<link rel="canonical" href="http://localhost:1313/slides/">
+<link rel="canonical" href="https://gusbeane.github.io/slides/">
 
 
 <link rel="preload" href="/fonts/fa-brands-400.woff2" as="font" type="font/woff2" crossorigin>
@@ -55,7 +55,7 @@ Based on Actions Are Weak Stellar Age Indicators in the Milky Way Disk and Explo
 
   
   
-  <link rel="stylesheet" href="/css/coder.css" media="screen">
+  <link rel="stylesheet" href="/css/coder.min.aa5ef26fa979d6793724ae2dbd71efa94fd16cb1c5c7db3b6651f21f9892a5fd.css" integrity="sha256-ql7yb6l51nk3JK4tvXHvqU/RbLHFx9s7ZlHyH5iSpf0=" crossorigin="anonymous" media="screen" />
 
 
 
@@ -105,7 +105,7 @@ Based on Actions Are Weak Stellar Age Indicators in the Milky Way Disk and Explo
     <nav class="navigation">
   <section class="container">
     
-    <a class="navigation-title" href="http://localhost:1313/">
+    <a class="navigation-title" href="https://gusbeane.github.io/">
       Gus Beane
     </a>
     
@@ -147,7 +147,7 @@ Based on Actions Are Weak Stellar Age Indicators in the Milky Way Disk and Explo
   <article>
     <header>
       <h1 class="title">
-        <a class="title-link" href="http://localhost:1313/slides/">
+        <a class="title-link" href="https://gusbeane.github.io/slides/">
           Slides
         </a>
       </h1>
@@ -190,7 +190,7 @@ Based on Actions Are Weak Stellar Age Indicators in the Milky Way Disk and Explo
 
   
   
-  <script src="/js/coder.js"></script>
+  <script src="/js/coder.min.6ae284be93d2d19dad1f02b0039508d9aab3180a12a06dcc71b0b0ef7825a317.js" integrity="sha256-auKEvpPS0Z2tHwKwA5UI2aqzGAoSoG3McbCw73gloxc="></script>
   
 
   
